[tool.poetry]
name = "DiscordSpammer"
version = "0.1.0"
description = "Discord Spammer - Autonomously sends multiple messages to discord on a timer."
authors = ["JayPythonCodes"]
license = "ISU"

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
